order per interval example
example folder

--- a/examples/config_live.yaml
+++ b/examples/config_live.yaml
@@ -6,20 +6,25 @@ client_id: 0
 #-------------- active strategies -------------#
 strategy:
   MovingAverageCrossStrategy:
-    short_window: 20
-    long_window: 80
+    params:
+      short_window: 20
+      long_window: 80
     symbols:
       - SPY STK SMART
       - AAPL STK SMART
       - AMZN STK SMART
   BuyAndHoldStrategy:
-    ticks: 5
+    params:
+      ticks: 5
     symbols:
       - SPY STK SMART
       - AMZN STK SMART
       - MSFT STK SMART
   OrderPerIntervalStrategy:
-    tick_trigger_threshold: 50
+    path: 'd:/workspace/quanttrading2/examples/order_per_interval_strategy.py'
+    params:
+      tick_trigger_threshold: 50
+      tick_trigger_threshold2: 100
     symbols:
       - IC1802
       - IF1802
