--- a/examples/config_live.yaml
+++ b/examples/config_live.yaml
@@ -30,12 +30,12 @@ strategy:
     active: True
     capital: 50000
     params:
-      tick_trigger_threshold: 50
+      tick_trigger_threshold: 5000
       tick_trigger_threshold2: 100
     symbols:
-      - SPY STK SMART
-      - AAPL STK SMART
-      - AMZN STK SMART
+      #- SPY STK SMART
+      #- AAPL STK SMART
+      #- AMZN STK SMART
       - ESU0 FUT GLOBEX
       - CLU0 FUT NYMEX
       - NGU0 FUT NYMEX
