--- a/examples/config_live.yaml
+++ b/examples/config_live.yaml
@@ -3,6 +3,7 @@ theme: dark           # white, dark
 host: '127.0.0.1'
 port: 7497
 client_id: 0
+log_path: 'd:/workspace/log/'
 #-------------- active strategies -------------#
 strategy:
   MovingAverageCrossStrategy:
