--- a/examples/config_live.yaml
+++ b/examples/config_live.yaml
@@ -3,7 +3,9 @@ theme: dark           # white, dark
 host: '127.0.0.1'
 port: 7497
 client_id: 0
-log_path: 'd:/workspace/log/'
+log_path: 'd:/workspace/runtime/log/'
+tick_path: 'd:/workspace/runtime/tick/'
+
 #-------------- active strategies -------------#
 strategy:
   MovingAverageCrossStrategy:
@@ -29,7 +31,7 @@ strategy:
     active: False
     capital: 50000
     params:
-      tick_trigger_threshold: 50
+      tick_trigger_threshold: 5000
     symbols:
       #- SPY STK SMART
       #- AAPL STK SMART
