--- a/examples/config_live.yaml
+++ b/examples/config_live.yaml
@@ -3,6 +3,10 @@ theme: dark           # white, dark
 host: '127.0.0.1'
 port: 7497
 client_id: 0
+total_trade_limit: 20
+total_cancel_limit: 10
+total_active_limit: 3
+total_loss_limit: 5000
 
 #-------------- active strategies -------------#
 strategy:
@@ -16,8 +20,15 @@ strategy:
   OrderPerIntervalStrategy:
     active: False
     capital: 50000
+    order_start_time: 09:40:00      # pad 0 in front
+    order_end_time: 15:50:00
+    single_trade_limit: 3
+    total_trade_limit: 15
+    total_cancel_limit: 5
+    total_active_limit: 2
+    total_loss_limit: 500
     params:
-      tick_trigger_threshold: 2000
+      tick_trigger_threshold: 1000
     symbols:
       #- SPY STK SMART
       #- AAPL STK SMART
