dual time frame
with config

--- a/examples/config_live.yaml
+++ b/examples/config_live.yaml
@@ -3,57 +3,60 @@ client_id: 0
 host: 127.0.0.1
 port: 7497
 strategy:
-  DoubleMovingAverageCrossStrategy:
-    active: false
-    capital: 10000
-    params:
-      n_fast_ma: 20
-      n_slow_ma: 200
-    symbols:
-    - NGZ0 FUT NYMEX
+  # DoubleMovingAverageCrossStrategy:
+  #   active: false
+  #   capital: 10000
+  #   params:
+  #     n_fast_ma: 20
+  #     n_slow_ma: 200
+  #   symbols:
+  #   - NGZ0 FUT NYMEX
   DualTimeFrameStrategy:
     active: false
     capital: 10000
     params:
+      start_time: 08:25:00
+      end_time: 09:00:00
+      shutdown_time: 08:24:58
       lookback_5sec: 20
       lookback_15sec: 20
     symbols:
     - ESM1 FUT GLOBEX
-  DualThrustStrategy:
-    active: false
-    capital: 10000
-    params:
-      G: 20
-    symbols:
-    - MESZ0 FUT GLOBEX
-  MovingAverageCrossStrategy:
-    active: false
-    capital: 10000
-    params:
-      G: 20
-    symbols:
-    - CLZ0 FUT NYMEX
-  ActiveBuySellStrengthStrategy:
-    active: false
-    capital: 10000
-    params:
-      strength_abs_threshold: 200
-    symbols:
-      - NQZ0 FUT GLOBEX
-  OrderPerIntervalStrategy:
-    active: false
-    capital: 50000
-    order_end_time: 57000
-    order_start_time: 09:40:00
-    params:
-      tick_trigger_threshold: 6000
-    single_trade_limit: 3
-    symbols:
-    - ESM1 FUT GLOBEX
-    total_active_limit: 2
-    total_cancel_limit: 5
-    total_loss_limit: 500
-    total_trade_limit: 15
+  # DualThrustStrategy:
+  #   active: false
+  #   capital: 10000
+  #   params:
+  #     G: 20
+  #   symbols:
+  #   - MESZ0 FUT GLOBEX
+  # MovingAverageCrossStrategy:
+  #   active: false
+  #   capital: 10000
+  #   params:
+  #     G: 20
+  #   symbols:
+  #   - CLZ0 FUT NYMEX
+  # ActiveBuySellStrengthStrategy:
+  #   active: false
+  #   capital: 10000
+  #   params:
+  #     strength_abs_threshold: 200
+  #   symbols:
+  #     - NQZ0 FUT GLOBEX
+  # OrderPerIntervalStrategy:
+  #   active: false
+  #   capital: 50000
+  #   order_end_time: 57000
+  #   order_start_time: 09:40:00
+  #   params:
+  #     tick_trigger_threshold: 6000
+  #   single_trade_limit: 3
+  #   symbols:
+  #   - ESM1 FUT GLOBEX
+  #   total_active_limit: 2
+  #   total_cancel_limit: 5
+  #   total_loss_limit: 500
+  #   total_trade_limit: 15
 theme: dark
 total_active_limit: 3
 total_cancel_limit: 10
