config and dual time frame
add comments to config
dual time frame strat

--- a/examples/config_live.yaml
+++ b/examples/config_live.yaml
@@ -2,7 +2,9 @@ account: LU1832
 client_id: 0
 host: 127.0.0.1
 port: 7497
+theme: dark
 strategy:
+  #---------- Strategy and params control -----------#
   # DoubleMovingAverageCrossStrategy:
   #   active: false
   #   capital: 10000
@@ -11,17 +13,20 @@ strategy:
   #     n_slow_ma: 200
   #   symbols:
   #   - NGZ0 FUT NYMEX
+  #---------- Strategy and params control -----------#
   DualTimeFrameStrategy:
     active: false
     capital: 10000
     params:
-      start_time: 08:25:00
-      end_time: 09:00:00
-      shutdown_time: 08:24:58
-      lookback_5sec: 20
+      start_time: '09:30:00'
+      end_time: '16:14:58'
+      bar_start_time: '09:00:00'
+      bar_end_time: '16:15:00'
+      lookback_5sec: 50
       lookback_15sec: 20
     symbols:
     - ESM1 FUT GLOBEX
+  #---------- Strategy and params control -----------#
   # DualThrustStrategy:
   #   active: false
   #   capital: 10000
@@ -29,6 +34,7 @@ strategy:
   #     G: 20
   #   symbols:
   #   - MESZ0 FUT GLOBEX
+  #---------- Strategy and params control -----------#
   # MovingAverageCrossStrategy:
   #   active: false
   #   capital: 10000
@@ -36,6 +42,7 @@ strategy:
   #     G: 20
   #   symbols:
   #   - CLZ0 FUT NYMEX
+  #---------- Strategy and params control -----------#
   # ActiveBuySellStrengthStrategy:
   #   active: false
   #   capital: 10000
@@ -43,22 +50,23 @@ strategy:
   #     strength_abs_threshold: 200
   #   symbols:
   #     - NQZ0 FUT GLOBEX
-  # OrderPerIntervalStrategy:
-  #   active: false
-  #   capital: 50000
-  #   order_end_time: 57000
-  #   order_start_time: 09:40:00
-  #   params:
-  #     tick_trigger_threshold: 6000
-  #   single_trade_limit: 3
-  #   symbols:
-  #   - ESM1 FUT GLOBEX
-  #   total_active_limit: 2
-  #   total_cancel_limit: 5
-  #   total_loss_limit: 500
-  #   total_trade_limit: 15
-theme: dark
+  #---------- Strategy, params control, and local risk control -----------#
+  OrderPerIntervalStrategy:
+    active: false
+    capital: 50000
+    order_start_time: '10:00:00'
+    order_end_time: '16:15:00'
+    params:
+      tick_trigger_threshold: 6000
+    single_trade_limit: 3
+    symbols:
+    - ESM1 FUT GLOBEX
+    total_active_limit: 2
+    total_cancel_limit: 5
+    total_loss_limit: 5000
+    total_trade_limit: 15
+#---------- global risk control -----------#
 total_active_limit: 3
 total_cancel_limit: 10
-total_loss_limit: 5000
+total_loss_limit: 10000
 total_trade_limit: 20
