--- a/pyproject.toml
+++ b/pyproject.toml
@@ -60,6 +60,9 @@ seaborn = "^0.12.2"
 # PyQt5 = ">=5.10.1"
 # QDarkStyle = ">=2.8"
 PyYAML = "^6.0.1"
+pyqt5 = "=5.15.10"   
+pyqt5-qt5 = "=5.15.2"
+qdarkstyle = "=2.8"
 ibapi = "^9.81.1"
 ta = "^0.11.0"
 gym = "^0.26.2"
